unpackaged/main/default/objects/Account/fields/Active_Mandates__c.field-meta.xml
<CustomField>
    <fullName>Active_Mandates__c</fullName>
    <description>How many active mandates are their for this entity</description>
    <label>Active Mandates</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>