unpackaged/main/default/objects/Account/fields/Addons__c.field-meta.xml
<CustomField>
    <fullName>Addons__c</fullName>
    <label>Addons</label>
    <length>255</length>
    <type>Text</type>
</CustomField>