unpackaged/main/default/objects/Account/fields/API__c.field-meta.xml
<CustomField>
    <fullName>API__c</fullName>
    <defaultValue>false</defaultValue>
    <label>API</label>
    <type>Checkbox</type>
</CustomField>