unpackaged/main/default/objects/Account/fields/Archived__c.field-meta.xml
<CustomField>
    <fullName>Archived__c</fullName>
    <label>Archived</label>
    <length>18</length>
    <type>Text</type>
</CustomField>