unpackaged/main/default/objects/Account/fields/Arthur_Id__c.field-meta.xml
<CustomField>
    <fullName>Arthur_Id__c</fullName>
    <description>Entity Id from the Arthur system associated with each account record</description>
    <externalId>true</externalId>
    <label>Arthur Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>