unpackaged/main/default/objects/Account/fields/Arthur_URL__c.field-meta.xml
<CustomField>
    <fullName>Arthur_URL__c</fullName>
    <description>Arthur URL to their  account</description>
    <label>Arthur URL</label>
    <type>Url</type>
</CustomField>