unpackaged/main/default/objects/Account/fields/Assigned_CSM__c.field-meta.xml
<CustomField>
    <fullName>Assigned_CSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned CSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>