unpackaged/main/default/objects/Account/fields/Automated_Events__c.field-meta.xml
<CustomField>
    <fullName>Automated_Events__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automated Events</label>
    <type>Checkbox</type>
</CustomField>