unpackaged/main/default/objects/Account/fields/Bank_Accounts_Connected_Yapily__c.field-meta.xml
<CustomField>
    <fullName>Bank_Accounts_Connected_Yapily__c</fullName>
    <label>Bank Accounts Connected (Yapily)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>