unpackaged/main/default/objects/Account/fields/Batch_Processes__c.field-meta.xml
<CustomField>
    <fullName>Batch_Processes__c</fullName>
    <label>Batch Processes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Batch Print</fullName>
            </value>
            <value>
                <fullName>Batch Remit</fullName>
            </value>
            <value>
                <fullName>Batch Rent Reconcile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>