unpackaged/main/default/objects/Account/fields/Became_Customer_Date__c.field-meta.xml
<CustomField>
    <fullName>Became_Customer_Date__c</fullName>
    <label>Became Customer Date</label>
    <type>Date</type>
</CustomField>