unpackaged/main/default/objects/Account/fields/Bespoke_Statements__c.field-meta.xml
<CustomField>
    <fullName>Bespoke_Statements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bespoke Statements</label>
    <type>Checkbox</type>
</CustomField>