unpackaged/main/default/objects/Account/fields/Bespoke_Tenant_App__c.field-meta.xml
<CustomField>
    <fullName>Bespoke_Tenant_App__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bespoke Tenant App</label>
    <type>Checkbox</type>
</CustomField>