unpackaged/main/default/objects/Account/fields/Book_Keeping__c.field-meta.xml
<CustomField>
    <fullName>Book_Keeping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Book Keeping</label>
    <type>Checkbox</type>
</CustomField>