unpackaged/main/default/objects/Account/fields/Cancellation_Feedback_URL__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Feedback_URL__c</fullName>
    <description>The URL sent to them to get their feedback after cancellation</description>
    <label>Cancellation Feedback URL</label>
    <type>Url</type>
</CustomField>