unpackaged/main/default/objects/Account/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <description>The reason a customer cancels their account</description>
    <label>Cancellation Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>