unpackaged/main/default/objects/Account/fields/Cancelled_Mandates__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Mandates__c</fullName>
    <description>Number of mandates that have been cancelled</description>
    <label>Cancelled Mandates</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>