unpackaged/main/default/objects/Account/fields/Charge_Description__c.field-meta.xml
<CustomField>
    <fullName>Charge_Description__c</fullName>
    <description>Latest Charge description</description>
    <label>Charge Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>