unpackaged/main/default/objects/Account/fields/Commercial_Detail_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Detail_Subscription__c</fullName>
    <description>Any monthly set up element and the subs due as separate values. So £2000 / 36 = £55pm for set up services for example.</description>
    <label>Commercial Detail Subscription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>