unpackaged/main/default/objects/Account/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <description>Start of the Contract</description>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>