unpackaged/main/default/objects/Account/fields/Credit_Checks_Call_Credit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Checks_Call_Credit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Checks (Call Credit)</label>
    <type>Checkbox</type>
</CustomField>