unpackaged/main/default/objects/Account/fields/Current_Mandate_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Mandate_Status__c</fullName>
    <description>Whether their GoCardless mandate is active or not</description>
    <label>Current Mandate Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Sent_to_Merchant</fullName>
                <label>Sent to Merchant</label>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>