unpackaged/main/default/objects/Account/fields/Current_Software_Provider__c.field-meta.xml
<CustomField>
    <fullName>Current_Software_Provider__c</fullName>
    <label>Current Software Provider</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Software_Provider</valueSetName>
    </valueSet>
</CustomField>