unpackaged/main/default/objects/Account/fields/Custom_Automation__c.field-meta.xml
<CustomField>
    <fullName>Custom_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Automation</label>
    <type>Checkbox</type>
</CustomField>