unpackaged/main/default/objects/Account/fields/Custom_Fields_Ent__c.field-meta.xml
<CustomField>
    <fullName>Custom_Fields_Ent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Fields (Ent)</label>
    <type>Checkbox</type>
</CustomField>