unpackaged/main/default/objects/Account/fields/Dashboards_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Dashboards_Subscription__c</fullName>
    <label>Dashboards Subscription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>