unpackaged/main/default/objects/Account/fields/Date_Charged__c.field-meta.xml
<CustomField>
    <fullName>Date_Charged__c</fullName>
    <label>Date Charged</label>
    <type>Date</type>
</CustomField>