unpackaged/main/default/objects/Account/fields/Date_Paid__c.field-meta.xml
<CustomField>
    <fullName>Date_Paid__c</fullName>
    <description>Latest Payment date</description>
    <label>Date Paid</label>
    <type>DateTime</type>
</CustomField>