unpackaged/main/default/objects/Account/fields/Date_Registered__c.field-meta.xml
<CustomField>
    <fullName>Date_Registered__c</fullName>
    <description>The date the account was created</description>
    <label>Date Registered</label>
    <type>DateTime</type>
</CustomField>