unpackaged/main/default/objects/Account/fields/Days_Extended__c.field-meta.xml
<CustomField>
    <fullName>Days_Extended__c</fullName>
    <label>Days Extended</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>