unpackaged/main/default/objects/Account/fields/Digital_Signatures__c.field-meta.xml
<CustomField>
    <fullName>Digital_Signatures__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digital Signatures</label>
    <type>Checkbox</type>
</CustomField>