unpackaged/main/default/objects/Account/fields/Digital_Signatures_Signable__c.field-meta.xml
<CustomField>
    <fullName>Digital_Signatures_Signable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digital Signatures (Signable)</label>
    <type>Checkbox</type>
</CustomField>