unpackaged/main/default/objects/Account/fields/Digital_Signitures_Signable__c.field-meta.xml
<CustomField>
    <fullName>Digital_Signitures_Signable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the account used Digital Signatures for the previous month from the &#39;Sync Date&#39;</description>
    <label>Digital Signitures (Signable)</label>
    <type>Checkbox</type>
</CustomField>