unpackaged/main/default/objects/Account/fields/Do_they_have_a_fix_term_contract__c.field-meta.xml
<CustomField>
    <fullName>Do_they_have_a_fix_term_contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do they have a fix term contract?</label>
    <type>Checkbox</type>
</CustomField>