unpackaged/main/default/objects/Account/fields/Entity_Group__c.field-meta.xml
<CustomField>
    <fullName>Entity_Group__c</fullName>
    <description>This populates the gield using the data fom the title, the primary entity or the primary overwrite based on priority</description>
    <label>Entity Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>