unpackaged/main/default/objects/Account/fields/Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>Entity_Id__c</fullName>
    <description>Nominal code in relation to URL for a individual client</description>
    <externalId>true</externalId>
    <label>Entity Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>