unpackaged/main/default/objects/Account/fields/Expiring_Tenancies__c.field-meta.xml
<CustomField>
    <fullName>Expiring_Tenancies__c</fullName>
    <label>Expiring Tenancies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>