unpackaged/main/default/objects/Account/fields/Extension_Reason__c.field-meta.xml
<CustomField>
    <fullName>Extension_Reason__c</fullName>
    <description>The reason why this account benefits an extended free trial</description>
    <label>Extension Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>