unpackaged/main/default/objects/Account/fields/First_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Invoice_Date__c</fullName>
    <label>First Invoice Date</label>
    <type>Date</type>
</CustomField>