unpackaged/main/default/objects/Account/fields/First_Successful_Collection__c.field-meta.xml
<CustomField>
    <fullName>First_Successful_Collection__c</fullName>
    <label>First Successful Collection</label>
    <type>DateTime</type>
</CustomField>