unpackaged/main/default/objects/Account/fields/Free_Trial_Extended__c.field-meta.xml
<CustomField>
    <fullName>Free_Trial_Extended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Free Trial Extended</label>
    <type>Checkbox</type>
</CustomField>