unpackaged/main/default/objects/Account/fields/Go_Cardless_Email__c.field-meta.xml
<CustomField>
    <fullName>Go_Cardless_Email__c</fullName>
    <description>The email adress registeres to the GoCardless account - this can be completly different to any email adress on Arthur</description>
    <label>Go-Cardless Email</label>
    <type>Email</type>
</CustomField>