unpackaged/main/default/objects/Account/fields/Go_Cardless_Ref__c.field-meta.xml
<CustomField>
    <fullName>Go_Cardless_Ref__c</fullName>
    <description>The reference number used to find the entities mandate in GoCardless</description>
    <label>Go-Cardless Ref.</label>
    <length>80</length>
    <type>Text</type>
</CustomField>