unpackaged/main/default/objects/Account/fields/Integration_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Account_Type__c</fullName>
    <label>Integration Account Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Xero</fullName>
            </value>
            <value>
                <fullName>Existing Xero</fullName>
            </value>
            <value>
                <fullName>Live Bank Feed</fullName>
            </value>
            <value>
                <fullName>Xero Setup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>