unpackaged/main/default/objects/Account/fields/Integration_Package__c.field-meta.xml
<CustomField>
    <fullName>Integration_Package__c</fullName>
    <label>Integration Package</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Plus</fullName>
            </value>
            <value>
                <fullName>Bespoke</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>