unpackaged/main/default/objects/Account/fields/Intercom_Chats_monthly__c.field-meta.xml
<CustomField>
    <fullName>Intercom_Chats_monthly__c</fullName>
    <label>Intercom Chats (monthly)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>