unpackaged/main/default/objects/Account/fields/Intercom_Chats_Total__c.field-meta.xml
<CustomField>
    <fullName>Intercom_Chats_Total__c</fullName>
    <label>Intercom Chats Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>