unpackaged/main/default/objects/Account/fields/Invited_Groups__c.field-meta.xml
<CustomField>
    <fullName>Invited_Groups__c</fullName>
    <label>Invited Groups</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contractors</fullName>
            </value>
            <value>
                <fullName>Tenants</fullName>
            </value>
            <value>
                <fullName>Property Owners</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>