unpackaged/main/default/objects/Account/fields/Last_Mandate_Change__c.field-meta.xml
<CustomField>
    <fullName>Last_Mandate_Change__c</fullName>
    <label>Last Mandate Change</label>
    <type>DateTime</type>
</CustomField>