unpackaged/main/default/objects/Account/fields/Last_Mandate_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Mandate_Status__c</fullName>
    <description>The last time the customer changed their mandate</description>
    <label>Last Mandate Status</label>
    <type>DateTime</type>
</CustomField>