unpackaged/main/default/objects/Account/fields/Latest_Login__c.field-meta.xml
<CustomField>
    <fullName>Latest_Login__c</fullName>
    <label>Latest Login</label>
    <type>DateTime</type>
</CustomField>