unpackaged/main/default/objects/Account/fields/Mail_Merge__c.field-meta.xml
<CustomField>
    <fullName>Mail_Merge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mail Merge</label>
    <type>Checkbox</type>
</CustomField>