unpackaged/main/default/objects/Account/fields/Mail_Merge_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Mail_Merge_Quantity__c</fullName>
    <description>This fields shows the number of Mail Merge products</description>
    <label>Mail Merge Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>