unpackaged/main/default/objects/Account/fields/Mail_Merged_Documents__c.field-meta.xml
<CustomField>
    <fullName>Mail_Merged_Documents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mail Merged Documents</label>
    <type>Checkbox</type>
</CustomField>