unpackaged/main/default/objects/Account/fields/No_Email_Marketing__c.field-meta.xml
<CustomField>
    <fullName>No_Email_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Email Marketing</label>
    <type>Checkbox</type>
</CustomField>