unpackaged/main/default/objects/Account/fields/NP_Score__c.field-meta.xml
<CustomField>
    <fullName>NP_Score__c</fullName>
    <label>NP Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>