unpackaged/main/default/objects/Account/fields/Number_of_Digital_Signitures__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Digital_Signitures__c</fullName>
    <label>Number of Digital Signitures</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>