unpackaged/main/default/objects/Account/fields/Number_of_Invited_Tenants__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Invited_Tenants__c</fullName>
    <label>Number of Invited Tenants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>