unpackaged/main/default/objects/Account/fields/Number_of_Mailmerge_Templates__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Mailmerge_Templates__c</fullName>
    <label>Number of Mailmerge Templates</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>