unpackaged/main/default/objects/Account/fields/Number_of_Multi_Unit_Properties__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Multi_Unit_Properties__c</fullName>
    <label>Number of Multi Unit Properties</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>