unpackaged/main/default/objects/Account/fields/Number_of_Raised_Workorders__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Raised_Workorders__c</fullName>
    <label>Number of Raised Workorders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>