unpackaged/main/default/objects/Account/fields/Number_of_SMS_texts_sent__c.field-meta.xml
<CustomField>
    <fullName>Number_of_SMS_texts_sent__c</fullName>
    <label>Number of SMS texts sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>