unpackaged/main/default/objects/Account/fields/Number_of_Uploaded_Documents__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Uploaded_Documents__c</fullName>
    <label>Number of Uploaded Documents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>