unpackaged/main/default/objects/Account/fields/Number_of_Viewings__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Viewings__c</fullName>
    <label>Number of Viewings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>