unpackaged/main/default/objects/Account/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <description>Office number of entity</description>
    <label>Office</label>
    <length>50</length>
    <type>Text</type>
</CustomField>