unpackaged/main/default/objects/Account/fields/Onboarded__c.field-meta.xml
<CustomField>
    <fullName>Onboarded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Onboarded</label>
    <type>Checkbox</type>
</CustomField>