unpackaged/main/default/objects/Account/fields/Onboarded_Date__c.field-meta.xml
<CustomField>
    <fullName>Onboarded_Date__c</fullName>
    <label>Onboarded Date</label>
    <type>Date</type>
</CustomField>