unpackaged/main/default/objects/Account/fields/Ordered_Products__c.field-meta.xml
<CustomField>
    <fullName>Ordered_Products__c</fullName>
    <description>Contains the products from Closed Won Opportunities</description>
    <label>Ordered Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Subscription</fullName>
            </value>
            <value>
                <fullName>Professional Subscription</fullName>
            </value>
            <value>
                <fullName>Professional Subscription Additional Account</fullName>
            </value>
            <value>
                <fullName>Enterprise Subscription</fullName>
            </value>
            <value>
                <fullName>Enterprise Subscription Additional Account</fullName>
            </value>
            <value>
                <fullName>Tilt Essentials Subscription</fullName>
            </value>
            <value>
                <fullName>Bespoke Subscription</fullName>
            </value>
            <value>
                <fullName>Platinum Property Partners Subscription (Professional)</fullName>
            </value>
            <value>
                <fullName>Platinum Property Partners Subscription (Enterprise)</fullName>
            </value>
            <value>
                <fullName>Accredited Accountant Subscription (Professional)</fullName>
            </value>
            <value>
                <fullName>Accredited Accountant Subscription (Enterprise)</fullName>
            </value>
            <value>
                <fullName>Sales Module</fullName>
            </value>
            <value>
                <fullName>Arthur Live Bank Feed Subscription</fullName>
            </value>
            <value>
                <fullName>Xero Subscription (Arthur Standard Subscription)</fullName>
            </value>
            <value>
                <fullName>Xero Subscription (Arthur Professional Subscription)</fullName>
            </value>
            <value>
                <fullName>Xero Subscription (Arthur Enterprise Subscription)</fullName>
            </value>
            <value>
                <fullName>Zoopla Connection</fullName>
            </value>
            <value>
                <fullName>RightMove Connection</fullName>
            </value>
            <value>
                <fullName>StuRents Connection</fullName>
            </value>
            <value>
                <fullName>OnTheMarket Connection</fullName>
            </value>
            <value>
                <fullName>PropertyPal Connection</fullName>
            </value>
            <value>
                <fullName>Boomin Connection</fullName>
            </value>
            <value>
                <fullName>Customer RMv3 Connection</fullName>
            </value>
            <value>
                <fullName>ArthurPay (Rent Collection and Reconcilliation)</fullName>
            </value>
            <value>
                <fullName>ArthurPay (For Letting Agents)</fullName>
            </value>
            <value>
                <fullName>Fixflo Integration</fullName>
            </value>
            <value>
                <fullName>SMS Credits (20)</fullName>
            </value>
            <value>
                <fullName>SMS Credits (50)</fullName>
            </value>
            <value>
                <fullName>SMS Credits (250)</fullName>
            </value>
            <value>
                <fullName>SMS Credits (500)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>