unpackaged/main/default/objects/Account/fields/Outstanding_Charges__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Charges__c</fullName>
    <label>Outstanding Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>