unpackaged/main/default/objects/Account/fields/Package_Description__c.field-meta.xml
<CustomField>
    <fullName>Package_Description__c</fullName>
    <description>The extended desciption that is visible to Arthur only/</description>
    <label>Package Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>