unpackaged/main/default/objects/Account/fields/Package_Group__c.field-meta.xml
<CustomField>
    <fullName>Package_Group__c</fullName>
    <label>Package Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>