unpackaged/main/default/objects/Account/fields/Package_Name__c.field-meta.xml
<CustomField>
    <fullName>Package_Name__c</fullName>
    <description>The name of the subscription that is visible to the customer</description>
    <label>Package Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>