unpackaged/main/default/objects/Account/fields/Pending_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Pending_Tasks__c</fullName>
    <label>Pending Tasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>