unpackaged/main/default/objects/Account/fields/Percentage_of_Outstanding_Charges__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_Outstanding_Charges__c</fullName>
    <label>% of Outstanding Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>