unpackaged/main/default/objects/Account/fields/Percentage_of_Tenancies_Expired__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_Tenancies_Expired__c</fullName>
    <label>% of Tenancies Expired</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>