unpackaged/main/default/objects/Account/fields/Percentage_of_Unregistered_Deposits__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_Unregistered_Deposits__c</fullName>
    <label>% of Unregistered Deposits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>