unpackaged/main/default/objects/Account/fields/Personalised_Applicant_Forms__c.field-meta.xml
<CustomField>
    <fullName>Personalised_Applicant_Forms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personalised Applicant Forms</label>
    <type>Checkbox</type>
</CustomField>