unpackaged/main/default/objects/Account/fields/Portal_Integrations__c.field-meta.xml
<CustomField>
    <fullName>Portal_Integrations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portal Integrations</label>
    <type>Checkbox</type>
</CustomField>