unpackaged/main/default/objects/Account/fields/Portfolio_Types__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Types__c</fullName>
    <label>Portfolio Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Portfolio_Types</valueSetName>
    </valueSet>
</CustomField>