unpackaged/main/default/objects/Account/fields/Previous_Package__c.field-meta.xml
<CustomField>
    <fullName>Previous_Package__c</fullName>
    <label>Previous Package</label>
    <length>255</length>
    <type>Text</type>
</CustomField>